Item 074: write the bux command line in Bux, with a launcher and a harness that holds it to lumen